# flutter_omr

./: .gitattributes  .gitignore  .metadata  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
.cache/clangd/index/: affine.hpp.5FE27D01C50269E1.idx  all_indices.h.606ACAFC6BE15662.idx  allocator.h.FD23E0EFE87D4E9F.idx  any.h.C5AA2F560F91E418.idx  async.hpp.C9CD4C455E8AD8DB.idx  autotuned_index.h.311DCF24F7B5FE15.idx  background_segm.hpp.163A80E1192B126B.idx  base.hpp.3AC70833D3A8516C.idx  blenders.hpp.AA49923ABEBFCD6D.idx  bufferpool.hpp.59B053A7E51E6941.idx  calib3d.hpp.54E3E4FE4F2794F8.idx  camera.hpp.80EB3F0CC56A0E3D.idx  check.hpp.35975FF287275E59.idx  composite_index.h.DF2B916B92622C7D.idx  config.h.18E7D95FED332E6F.idx  core.hpp.6919DDDC69A63A3A.idx  cuda.hpp.FA2DC729900E1841.idx  cuda.inl.hpp.2ABCEDE82427F193.idx  cuda_types.hpp.FEB1C71F39CF44C9.idx  cv_cpu_dispatch.h.A973C11632911FEC.idx  cvdef.h.F3ECDC475D0FFA0F.idx  cvstd.hpp.7737B923CF4880D2.idx  cvstd.inl.hpp.A7FFC626D8D1D814.idx  cvstd_wrapper.hpp.244C4593E6CB9298.idx  defines.h.99845522415A13FC.idx  detection_based_tracker.hpp.DE5B236EA2EFA9F6.idx  dict.hpp.ED0EA98E0CF629FA.idx  dist.h.41712CC79BC7BBF7.idx  dnn.hpp.2B5103BC9061FDD6.idx  (+70 more)
android/: build.gradle  settings.gradle
example/: README.md  pubspec.yaml
example/lib/: main.dart  picker_helper.dart
ios/: flutter_omr.podspec  flutter_orm.podspec
ios/Classes/: flutter_omr.cpp  flutter_orm.cpp
lib/: flutter_omr.dart  flutter_orm.dart
lib/helper/: orm_helper.dart
lib/models/: ent_orm.dart  models.dart  orm_enums.dart  orm_question.dart
lib/src/: omr.dart  omr_bindings_generated.dart  orm.dart  orm_bindings_generated.dart
src/: CMakeLists.txt  flutter_omr.cpp
(+6 files in other folders)
